--- a/test.html
+++ b/test.html
@@ -49,9 +49,9 @@
     let processing = false;
     let referenceSpace;
 
-    const offscreenCanvas = document.createElement('canvas');
-    const offscreenCtx = offscreenCanvas.getContext('2d');
     let maskCtx;
+    const texCanvas = document.createElement('canvas');
+    const texCtx = texCanvas.getContext('2d');
 
     async function loadModel() {
       model = await tf.loadLayersModel('jsModel/model.json');
@@ -93,14 +93,17 @@
       if (processing) return;
       processing = true;
       try {
-        const width = view.camera.width;
-        const height = view.camera.height;
+        const tex = glBinding.getCameraImage(view.camera);
+        const texW = view.camera.width;
+        const texH = view.camera.height;
 
-        offscreenCanvas.width = width;
-        offscreenCanvas.height = height;
-        offscreenCtx.drawImage(gl.canvas, 0, 0, width, height);
+        texCanvas.width = texW;
+        texCanvas.height = texH;
 
-        const img = tf.browser.fromPixels(offscreenCanvas, 3).div(255);
+        const bitmap = await createImageBitmap(tex);
+        texCtx.drawImage(bitmap, 0, 0, texW, texH);
+
+        const img = tf.browser.fromPixels(texCanvas).div(255);
         const resized = tf.image.resizeBilinear(img, [224, 224]).expandDims();
 
         const pred = await model.predict(resized);
@@ -114,7 +117,6 @@
           imageData.data[i * 4 + 2] = val;
           imageData.data[i * 4 + 3] = 255;
         }
-
         maskCtx.putImageData(imageData, 0, 0);
       } catch (e) {
         log("Error: " + e.message);
