--- a/test.html
+++ b/test.html
@@ -49,8 +49,6 @@
     let processing = false;
     let referenceSpace;
 
-    let offscreenCanvas = document.createElement('canvas');
-    let offscreenCtx = offscreenCanvas.getContext('2d');
     let maskCtx = document.getElementById('maskCanvas').getContext('2d');
 
     async function loadModel() {
@@ -87,39 +85,13 @@
       document.getElementById('startARBtn').style.display = 'none';
     }
 
-    async function processCameraFrame(view) {
+    async function processCameraFrame() {
       if (processing) return;
       processing = true;
       try {
-        const texture = glBinding.getCameraImage(view.camera);
-        const width = view.camera.width;
-        const height = view.camera.height;
-
-        const tex = gl.createTexture();
-        gl.bindTexture(gl.TEXTURE_2D, tex);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, width, height, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
-
-        const fb = gl.createFramebuffer();
-        gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
-        gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
-        gl.viewport(0, 0, width, height);
-        gl.clear(gl.COLOR_BUFFER_BIT);
-        gl.bindTexture(gl.TEXTURE_2D, texture);
-
-        const pixels = new Uint8Array(width * height * 4);
-        gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
-
-        offscreenCanvas.width = width;
-        offscreenCanvas.height = height;
-
-        const imageData = new ImageData(new Uint8ClampedArray(pixels), width, height);
-        offscreenCtx.putImageData(imageData, 0, 0);
-
-        const img = tf.browser.fromPixels(offscreenCanvas, 3).div(255);
-        const resized = tf.image.resizeBilinear(img, [224, 224]).expandDims();
-
+        const canvas = renderer.domElement;
+        const input = tf.browser.fromPixels(canvas, 3).div(255);
+        const resized = tf.image.resizeBilinear(input, [224, 224]).expandDims();
         const pred = await model.predict(resized);
         const arr = await pred.data();
 
@@ -158,7 +130,7 @@
       renderer.render(scene, camera);
 
       if (running && !processing) {
-        processCameraFrame(view);
+        processCameraFrame();
       }
     }
 
